# playwright_browser_manager

./: README.md  browser_manager.py  example_usage_async.py  example_usage_sync.py  example_uses_without_profile_async.py  example_uses_without_profile_sync.py  pyproject.toml  requirements.txt
playwright_browser_manager/: __init__.py  browser_manager.py  proxy_config.py
