[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-browser-manager"
version = "1.0.0"
description = "Playwright browser manager with profile and proxy support"
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.58.0",
    "psutil>=5.9",
    "requests>=2.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["playwright_browser_manager*"]
